updated the info

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Neko astolfos</h1>
+<p>This is just a placeholder for stuff like css files that are used for discord themes</p>
+<img href="https://i.imgur.com/Okho5FR.jpeg">
 </body>
 </html>
