--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Neko astolfos</h1>
 <p>This is just a placeholder for stuff like css files that are used for discord themes</p>
-<img href=https://i.imgur.com/Okho5FR.jpeg>
+<img src="https://i.imgur.com/Okho5FR.jpeg">
 </body>
 </html>
