--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Neko astolfos</h1>
-<p>This is just a placeholder for stuff like css files that are used for discord themes</p>
+<h1>Hrose</h1>
+<p>hrose</p>
 <img src="https://i.imgur.com/Okho5FR.jpeg">
 </body>
 </html>
