hrose made smaller

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hrose</h1>
 <p>hrose</p>
-<img src="https://i.imgur.com/Okho5FR.jpeg">
+<img src="https://i.imgur.com/Okho5FR.jpeg" height=200px width=200px>
 </body>
 </html>
